# cerberus-ml

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.airflow  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-airflow.txt
.github/workflows/: ci.yml
api/: config.py  database.py  exceptions.py  logger.py  main.py  tags.py
api/routers/: chat.py  kpis.py
api/schemas/: chat.py  kpi.py
api/services/: analytics.py  health.py
consumer/: db_writer.py  publish_test.py  rabbit_consumer.py
dags/: cerberus_etl_dag.py
data/demo/: 01_scan_requests.csv  02_scan_results.csv  03_findings.csv  04_scan_verdicts.csv  load_data_demo.py
database/: README.md  SCHEMA_CHANGELOG.md  docker-compose.yml
database/analytics/migrations/: 001_create_schema.sql  002_create_dim_date.sql  003_create_dim_repository.sql  004_create_dim_rule.sql  005_create_dim_severity.sql  006_create_fact_findings.sql
database/analytics/seeds/: 001_seed_dim_severity.sql  002_seed_dim_date.sql
database/init/: 001_create_scans.sql  002_create_scan_services.sql  003_create_findings.sql  004_create_verdicts.sql  005_create_users_and_audit.sql
database/legacy/: cerberus_schema_oltp_v1.sql
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  ETL.md
etl/: __init__.py  database.py  extract.py  load_dim_date.py  load_dim_repository.py  load_dim_rule.py  load_fact_findings.py  run.py
powerbi/: cerberus.pbix
